# lora-module-fw

./: .gitmodules  README.md  rust-toolchain.toml
.github/: dependabot.template.yml  dependabot.yml
.github/workflows/: generate_dependabot.yml  rust.yml
gateway-host-schema/: Cargo.toml
gateway-host-schema/src/: lib.rs
module-bootloader/: Cargo.toml  memory.x
module-gateway/: Cargo.toml  build.rs  memory.x
module-gateway/.cargo/: config.toml
module-gateway/src/: gateway.rs  main.rs
module-node/: Cargo.toml  memory.x
module-node/.cargo/: config.toml
module-node/src/: main.rs  ota_memory.rs  soil_sensor.rs
module-runtime/: Cargo.toml
module-runtime/.cargo/: config.toml
module-runtime/src/: host.rs  iv.rs  lib.rs  lora.rs  ota.rs
module-runtime/src/ota/: common.rs  consumer.rs  mod.rs  producer.rs
updater/: protocol.py  requirements.txt  updater.py
