[package]
name = "module-bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.0"

embassy-stm32 = { path = "../external/embassy/embassy-stm32", features = ["stm32wle5cc", "unstable-pac"] }
embassy-boot-stm32 = { path = "../external/embassy/embassy-boot-stm32" }
embassy-sync = { path = "../external/embassy/embassy-sync" }
cfg-if = "1.0.0"

defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

[features]
defmt = [
    "dep:defmt",
    "embassy-boot-stm32/defmt",
    "embassy-stm32/defmt",
]
debug = ["defmt-rtt", "defmt"]

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false