[package]
authors = ["Jiri Manak"]
edition = "2021"
readme = "README.md"
name = "module-node"
version = "0.1.0"

[[bin]]
name = "module-node"
test = false
bench = false

[dependencies]
module-runtime = { path = "../module-runtime" }
embassy-executor = { path = "../external/embassy/embassy-executor" }

[profile.release]
codegen-units = 1 # better optimizations
lto = true # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
opt-level = "z"
