[package]
authors = ["Jiri Manak"]
edition = "2021"
readme = "README.md"
name = "module-runtime"
version = "0.1.0"

[lib]
crate-type = ["lib"]
name = "module_runtime"
test = false
bench = false

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-storage = "0.3.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
# must be same as postcard
heapless = { version = "0.7", default-features = false, features = ["serde"] }
chrono = { version = "^0.4", default-features = false }
lora-phy = { version = "2" }

defmt = "0.3"
defmt-rtt = "0.4"

postcard = { version = "1.0.8", default-features = false, features = ["heapless", "use-defmt"]}
serde = { version = "1.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy.git"
rev = "76f3a11f43b9f64d2acfe2ebd747fb2741c73bfc"
features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"]

[dependencies.embassy-futures]
git = "https://github.com/embassy-rs/embassy.git"
rev = "76f3a11f43b9f64d2acfe2ebd747fb2741c73bfc"

[dependencies.embassy-stm32]
git = "https://github.com/embassy-rs/embassy.git"
rev = "76f3a11f43b9f64d2acfe2ebd747fb2741c73bfc"
features = ["nightly", "unstable-traits", "defmt", "stm32wle5cc", "time-driver-any", "memory-x", "unstable-pac", "exti", "chrono"]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy.git"
rev = "76f3a11f43b9f64d2acfe2ebd747fb2741c73bfc"
features = ["defmt"]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy.git"
rev = "76f3a11f43b9f64d2acfe2ebd747fb2741c73bfc"
features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]

[dependencies.embassy-embedded-hal]
git = "https://github.com/embassy-rs/embassy.git"
rev = "76f3a11f43b9f64d2acfe2ebd747fb2741c73bfc"

[dependencies.embassy-lora]
git = "https://github.com/embassy-rs/embassy.git"
rev = "76f3a11f43b9f64d2acfe2ebd747fb2741c73bfc"
features = ["stm32wl", "time", "defmt"]
